[package]
name = "luminmq-client"
version = "0.1.0"
edition = "2024"

[dependencies]
mio = { version = "1.0.4", features = ["os-poll", "net"] }
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.5.0"
luminmq-core = { version = "0.1.0", path = "../core" }
luminmq-macro = { version = "0.1.0", path = "../macro" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ctor = "0.6.0"
