[package]
name = "luminmq"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
prettytable = "0.10.0"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
luminmq-server = { version = "0.1.0", path = "../server" }
tracing = "0.1.37"
tracing-subscriber = "0.3.20"
