[package]
name = "luminmq-macro"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "LuminMQ related macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
luminmq-core = { version = "0.1.0", path = "../core" }
lazy_static = "1.5.0"
ctor = "0.6.0"
