[package]
name = "luminmq-server"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
mio = { version = "1.0.4", features = ["os-poll", "net"] }
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"
axum = "0.8.5"